# aktsp2023

./: README.md  aktsp2023.opam  aktsp2023.opam.locked  dune-project
.github/workflows/: ci.yml
src/: dune
src/crashcourse/: basics.ml  collections.ml  types.ml
src/fixpoint/: fixpoint.ml
src/modelcheck/program/: modelcheck_program.ml
test/crashcourse/: collections_test.ml  crashcourse_test.ml  dune  types_test.ml
test/fixpoint/: dune
test/modelcheck/: modelcheck_test.ml
test/modelcheck/program/: program_test.ml
test/ounit-todo/: dune  oUnitTodo.ml
